[Web Payments] Fix some ScrollView issues in the dialog.

BUG=704254

Review-Url: https://codereview.chromium.org/2844483002
Cr-Commit-Position: refs/heads/master@{#467066}

Former-commit-id: 81f1ef0b451bba880803d6c230a1fe384c1be9f3