chrome/browser/ui/views/payments/payment_request_sheet_controller.cc
@@ -41,6 +41,9 @@ void PaymentRequestSheetController::UpdateContentView() {
   FillContentView(content_view_);
   content_view_->Layout();
   pane_->SizeToPreferredSize();
+  // Now that the content and its surrounding pane are updated, force a Layout
+  // on the ScrollView so that it updates its scroll bars now.
+  scroll_->Layout();
 }
 
 std::unique_ptr<views::Button>
@@ -117,12 +120,12 @@ PaymentRequestSheetController::CreatePaymentView() {
   pane_layout->AddView(content_view_);
   pane_->SizeToPreferredSize();
 
-  std::unique_ptr<views::ScrollView> scroll =
-      base::MakeUnique<views::ScrollView>();
-  scroll->EnableViewPortLayer();
-  scroll->set_hide_horizontal_scrollbar(true);
-  scroll->SetContents(pane_);
-  layout->AddView(scroll.release());
+  scroll_ = base::MakeUnique<views::ScrollView>();
+  scroll_->set_owned_by_client();
+  scroll_->EnableViewPortLayer();
+  scroll_->set_hide_horizontal_scrollbar(true);
+  scroll_->SetContents(pane_);
+  layout->AddView(scroll_.get());
 
   layout->StartRow(0, 0);
   layout->AddView(CreateFooterView().release());
